--- a/src/site/2024.md
+++ b/src/site/2024.md
@@ -1,25 +1,16 @@
 ---
 title: 2024
 layout: layouts/about.njk
-subtitle: Archivo del Almanaque xpress.
+subtitle: Archivo de Almanaque digital.
 ---
 
 
-## Enero 2024 
-
-Data de almanaques y medios digitales:
-
-- Como ya es tradición, la Diablada Pillareña (Cantón Pillaro, Prov. Tungurahua) *-declarada patrimonio cultural inmaterial del Ecuador-* se celebra del 1 al 6 de enero. Más detalles en el portal digital del [Diario la Hora](https://www.lahora.com.ec/tungurahua/conoce-partidas-seran-parte-diablada-pillarena-2024/).
-- Tres fechas a destacar en el calendario eclesiástico para enero: 06, Fiesta de la Epifanía o Día de Reyes; 25, Conversión de san Pablo Apostol y; 28, día de santo Tomás de Aquino.
-- En las tradiciones del hemisferio norte (América y Europa), a la luna llena de enero se la denomina LUNA DE LOBO / LUNA DE NIEVE; algunas culturas nativas de Norte América cuentan que en esta temporada era más probable escuchar a los lobos aullando. 
-- Este mes tendremos una **luna llena en Leo**. Recuerda: las lunas llenas, a nivel astrológico, son tiempos de cosecha. ¿Qué es lo que vamos a cosechar; será acaso aquello que sembramos en la luna nueva en Leo, hace seis meses? -16.08.2023-.  
-- Se esperan las siguientes fases lunares hora de Ecuador (GMT -5) según [Lunarium](https://www.lunarium.co.uk) :
-
-<br/>  
-  
-| Fase lunar              | Fecha 	| Hora |
-| :---------------- | :------  	| :---- |
-| Menguante        |   Miércoles 03.01.2024   	| 22:30 |
-| Nueva           |   Jueves 11.01.2024   	| 06:57 |
-| Creciente    |  Miércoles 17.01.2024   	| 22:52 |
-| Llena |  Jueves 25.01.2024   	| 12:53 |  
+<ul class="listing">
+{%- for page in collections.post | reverse -%}
+  <li>
+    <a class="ptsans" href="{{ page.url }}">{{ page.data.title }}</a> -
+    <time datetime="{{ page.date }}">{{ page.date | dateDisplay("LLLL d, y") }}</time>
+  </li>
+  <p class="descriptor">{{ page.data.description }}</p>
+{%- endfor -%}
+</ul>
